src/test/ui/issues/issue-12863.rs
mod foo { pub fn bar() {} }

fn main() {
    match () {
        foo::bar => {} //~ ERROR expected unit struct/variant or constant, found function `foo::bar`
    }
}
